# neo-recall

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  probe.py  probe_write.py  pyproject.toml
src/neosapien_mcp/: __init__.py  constants.py  server.py  service.py
src/neosapien_mcp/auth/: __init__.py  bootstrap.py  google_login.py  store.py  tokens.py
src/neosapien_mcp/cache/: sqlite.py
src/neosapien_mcp/client/: firestore.py  parse.py  writes.py
src/neosapien_mcp/enrich/: analytics.py  briefs.py  duplicates.py  extract.py  graph.py  quality.py  related.py  search_rank.py
src/neosapien_mcp/models/: memory.py
src/neosapien_mcp/prompts/: server_prompt.md
src/neosapien_mcp/tools/: handlers.py
tests/: test_parse_and_enrich.py  test_search_rank.py  test_writes.py
