[project]
name = "neo-recall"
version = "0.1.0"
description = "NeoRecall — read-only MCP for NeoSapien memories with local synthesis tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mayank Bohra" }]
dependencies = [
  "mcp>=1.9.0",
  "httpx>=0.28.0",
  "pydantic>=2.10.0",
  "keyring>=25.0.0",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.9.0"]

[project.scripts]
neo-recall = "neosapien_mcp.server:main"
neo-recall-auth = "neosapien_mcp.auth.bootstrap:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neosapien_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src/neosapien_mcp" = "neosapien_mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
